# narrative_llm_agent

./: .gitignore  LICENSE  README.md  config.cfg  dockerfile  entrypoint.sh  pyproject.toml
.github/workflows/: pr_test.yml
jgi_data_results/: README.md  img_llm_annotations.tsv  img_llm_annotations_with_gtdb.tsv  jgi_data_portal.ipynb
lightrag_test/: README.md  graph_visual_with_html.py  kbase_catalog_query.py  kbase_simple_setup.py  lightrag_catalog_test.py  lightrag_dickens.py  util.py
narrative_llm_agent/: config.py  llm_factory.py  token_counter.py
narrative_llm_agent/agents/: KnowledgeGraph.py  analyst.py  analyst_lang.py  coordinator.py  job.py  kbase_agent.py  metadata.py  metadata_lang.py  narrative.py  validator.py  workflow.py  workspace.py  writer.py
narrative_llm_agent/crews/: finalize_crew.py  job_crew.py  startup_crew.py
narrative_llm_agent/eval/: evaluate_execution.py  evaluate_planning.py
narrative_llm_agent/kbase/: auth.py  dynamic_service_client.py  service_client.py
narrative_llm_agent/tools/: analyst_tools.py  app_tools.py  human_tool.py  information_tool.py  job_tools.py  kgtool_cosine_sim.py  narrative_tools.py  report_tools.py  workspace_tools.py
narrative_llm_agent/user_interface/: app.py  appchainlit.py  chainlit.md  constants.py  genome_annotation_pipeline_streamlit.py  kbase_loader.py  kbase_research_agent_dash_app_remove_feedback.py  kbase_research_agent_dash_app_stream_nothreading.py  streaming.py  testhumantool.py  ui_dash_hitl.py  workflow_runners.py
narrative_llm_agent/util/: app.py  json_util.py  llm_config.py  metadata_util.py  narrative.py  semantic.py  tool.py  workspace.py
narrative_llm_agent/workflow_graph/: graph.py  graph_hitl.py  nodes.py  nodes_hitl.py  routers.py  routers_hitl.py  state.py
narrative_llm_agent/writer_graph/: graph.py  mra_graph.py  summary_graph.py  writeup_state.py
notebooks/: Workflow_runner.ipynb  combine_intro_app_workflows.ipynb  img_llm_annotations.tsv  img_llm_annotations_with_gtdb.tsv  jgi_data_portal.ipynb  narrative_agent_end2end_test.ipynb  test_full_crew.ipynb  test_full_crew_split_analysis_plan.ipynb  test_metadata_agent.ipynb  test_modular_langgraph_graph.ipynb  test_modular_langgraph_manual.ipynb
scripts/: download_kbase_catalog.py  evaluate_planning_workflow.py  full_pipeline.py  run_batch_pipeline.py
tests/: conftest.py  test.cfg  test.ipynb  test_config.py  test_kbase_agent.py  test_token_counter.py
tests/agents/: test.ipynb  test_analyst_agent.py  test_analyst_lang_agent.py  test_coordinator_agent.py  test_job_agent.py  test_kbase_agent.py  test_metadata_agent.py  test_narrative_agent.py  test_validator.py  test_workflow_agent.py  test_workspace_agent.py  test_writer_agent.py
tests/crews/: test_finalize_crew.py  test_job_crew.py  test_startup_crew.py
tests/eval/: test_evaluate_planning.py
tests/kbase/: test_auth.py  test_service_client.py
tests/scripts/: test_full_pipeline.py
tests/test_data/: fake_ws_data.json  job_states.json  test_data.py  test_narrative.json  test_report_html_links.json
tests/tools/: test_app_tools.py  test_job_tools.py  test_narrative_tools.py  test_report_tools.py  test_workspace_tools.py
(+61 files in other folders)
