[tool.poetry]
name = "narrative-llm-agent"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "narrative_llm_agent"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
langchain = "^0.1.3"
crewai = "0.16.3"
requests = "^2.31.0"
chromadb = "^0.4.24"
ruff = "0.3.1"
neo4j = "^5.18.0"
streamlit = "^1.32.2"
dash = "^2.16.1"
chainlit = "^1.0.401"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
requests-mock = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --cov=narrative_llm_agent -s --verbose --cov-report html --cov-report xml --cov-report term"
