[tool.poetry]
name = "narrative-llm-agent"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "narrative_llm_agent"},{include='tests'}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
langchain = "*"
crewai = "*"
requests = "*"
chromadb = "*"
neo4j = "*"
streamlit = "*"
dash = "*"
chainlit = ">1.3.2"
langchain-chroma = "*"
# lightrag-hku = "^1.0.5"
aioboto3 = "^13.2.0"
beautifulsoup4 = "^4.12.3"
pydantic = "^2.10.6"
langchain-openai = "^0.3.4"
langchain-community = "^0.3.17"
langgraph = "^0.2.70"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
requests-mock = "^1.11.0"
ruff = ">0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --cov=narrative_llm_agent -s --verbose --cov-report html --cov-report xml --cov-report term"
