[tool.poetry]
name = "narrative-llm-agent"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "narrative_llm_agent"},{include='tests'}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
aioboto3 = "^13.2.0"
beautifulsoup4 = "^4.12.3"
chainlit = ">1.3.2"
chromadb = "*"
dash = {extras = ["diskcache"], version = "^3.2.0"}
langchain = "*"
langchain-chroma = "*"
langchain-community = "*"
langchain-openai = "*"
langgraph = "*"
neo4j = "*"
openai = ">1.68.2"
pydantic = "^2.10.6"
requests = "*"
scikit-learn = "^1.6.1"
streamlit = "*"
langchain-nomic = "0.1.4"
crewai = {git = "https://github.com/briehl/crewAI"}
dash-bootstrap-components = "^2.0.3"
ansi2html = "^1.9.2"
dash-extensions = "^2.0.4"
cacheout = "^0.16.0"
diskcache = "^5.6.3"
redis = "5.0"
celery = "5.4"
langchain-anthropic = "^0.3.21"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
requests-mock = "^1.11.0"
ruff = ">0.3.1"
ipython = "^9.0.2"
jupyterlab = "^4.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --cov=narrative_llm_agent -s --verbose --cov-report html --cov-report xml --cov-report term"
